# fda

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.fda/: agent_roles.yaml  artifact_map.yaml  delegation_contract.yaml  delivery_policy.yaml  gates.yaml  notification.yaml  repo.yaml
.github/workflows/: ci.yml
adapters/: README.md
agents/: README.md  contract_qa.md  functional_qa.md  human_liaison.md  implementer.md  merge_manager.md  program_orchestrator.md  requirements_analyst.md  security_qa.md  solution_architect.md  work_breakdown_planner.md
artifacts/review_packets/: poc-2b1-user-facing-quiz.md  poc-2d-slack-reply-intake.md  poc-2e-slack-socket-live-reply-intake.md  poc-2f-slack-thread-grading-response.md  poc-2g-scheduler-idempotency-run-state.md  poc-2h-socket-run-state-grading.md  poc-2i-daily-operation-runbook.md  poc-3-adaptive-study-loop.md  poc-3a-adaptive-daily-dispatch.md  poc-3c-slack-full-10-question-body.md  poc-4-catch-up-dispatch.md  poc-4-daily-grade-poll.md  poc-4-daily-maintain.md  poc-4-daily-status.md  poc-4-runtime-runbook-catch-up.md  poc-aicx-closeout-generic-runtime.md  pr-1.md  pr-123.md  pr-124.md  pr-3.md  pr-4.md  pr-5.md  (+20 more)
evals/: README.md
model_contracts/: README.md  implementer.contract.yaml  merge.contract.yaml  planner.contract.yaml  qa.contract.yaml
scripts/: aicx_study_fixture.py  check_architecture_boundaries.py  check_review_agent_gate.py
skills/: README.md  registry.yaml
src/: lib.rs  main.rs
tests/: test_aicx_study_fixture.py  test_architecture_boundaries.py  test_review_agent_gate.py
(+501 files in other folders)
