[package]
name = "forge-delivery-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fda"
path = "src/main.rs"

[dependencies]
jsonschema = { version = "0.17", features = ["draft202012"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
